# monitor-engine

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: discovery-validate.yml  monitor.yml  pages.yml
clients/aerospace/: config.json  feedback.example.json
clients/aerospace/artifacts/: archive.json  run_output.json  sw.js
clients/healthcare-regulatory/: config.json  intake.json
clients/healthcare-regulatory/artifacts/: archive.json  index.html  run_output.json
docs/intake/: QUESTIONNAIRE.md  intake.schema.json  survey.html  survey.js
monitor_engine/: __main__.py  feedback.py  models.py  pipeline.py
monitor_engine/analysis/: __init__.py  grouping.py  prompts.py  scorer.py  validation.py
monitor_engine/archive/: __init__.py  core.py
monitor_engine/collectors/: __main__.py  base.py  html_list.py  json_api.py  rss.py
monitor_engine/site/: __init__.py  builder.py
monitor_engine/site/_assets/: app.js  style.css
monitor_engine/site/_template/: index.html
tests/: test_analysis.py  test_archive.py  test_build_pages.py  test_collectors.py  test_discovery_agent.py  test_discovery_tools.py  test_feedback.py  test_frontend.py  test_grouping.py  test_pipeline.py  test_scaffold.py  test_site.py  test_survey.py  test_validate_discovery.py
tests/fixtures/: sample_api.json  sample_html.html  sample_rss.xml
tests/frontend/: dom_harness.mjs  intake_harness.mjs  render.mjs
tests/frontend/fixtures/: sample_run_output.json
tooling/: build_pages.py  discovery_agent.py  discovery_tools.py  scaffold.py  validate_discovery.py
