[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor_engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "feedparser>=6.0",        # RSS/Atom parsing — approved
    "beautifulsoup4>=4.12",   # CSS-selector HTML parsing — approved
    "python-dateutil>=2.9",   # date string fallback parser — approved
    "anthropic>=0.50",        # LLM classification and synthesis — approved
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor_engine*"]

[tool.setuptools.package-data]
monitor_engine = [
    "site/_assets/*.css",
    "site/_assets/*.js",
    "site/_template/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
